--- a/Index.html
+++ b/Index.html
@@ -5,21 +5,118 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cordel Moderno</title>
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      p.cordel_design {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
+      rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
     <header>
-      CORDEL MODERNO - Tecnologia do agora.
-      <p>
+      <p id="txttitulo">
+        CORDEL MODERNO
         <a
           href="https://www.recantodasletras.com.br/poesias/3186743"
-          target="_blank"
-          >Por Milton Duarte
+          target="_blank">
+          <p id="txtautor">Por Milton Duarte</p>
         </a>
       </p>
     </header>
-    <main></main>
+
+    <section>
+      <p class="Paragrafostxt">
+        Estou ficando cansado<br />
+        Da tal tecnologiar <br />
+        Só se fala por e-mail<br />
+        Mensagem curta e fria<br />
+        Twitter e Facebook<br />
+        Antes que eu caduque<br />
+        Vou dizer tudo em poesia.<br />
+      </p>
+      <br />
+
+      <p id="imagem01" class="Paragrafosimg">
+        Não é mais como era antes<br />
+        É tudo abreviado<br />
+        "Você" só tem duas letras<br />
+        O "O" e o "E" foi riscado<br />
+        Para declarar o amor<br />
+        Basta botar uma flor<br />
+        E um coração desenhado.<br />
+      </p>
+      <br />
+    </section>
+
+    <section>
+      <p class="Paragrafostxt">
+        Arroba agora não pesa<br />
+        É parte de um endereço<br />
+        Ponto final nem se usa<br />
+        Ou vai até no começo<br />
+        Agora é .com<br />
+        Se o saite é muito bom<br />
+        Ele vale um alto preço.<br />
+      </p>
+      <br />
+
+      <p class="Paragrafostxt">
+        Pra piorar a liguagem<br />
+        O emoticom é um risco<br />
+        Tem símbolo para tudo<br />
+        Ponto e vírgula e um asterisco<br />
+        Um beijo significa<br />
+        Pra entender como fica<br />
+        Decifre esse rabisco.
+      </p>
+    </section>
+    <br />
+
+    <section>
+      <p class="Paragrafostxt">
+        Tenho saudade das cartas<br />
+        Escritas com a própria mão<br />
+        Mandava no mês de Junho<br />
+        Só chegava no Verão<br />
+        Mas matava a saudade<br />
+        Era texto de verdade<br />
+        Nas linhas do coração.<br />
+        <br />
+        Agora, escrevo e envio<br />
+        Chegando na mesma hora<br />
+        Mas quando vou prosear<br />
+        A pessoa foi embora<br />
+        Abriu outro aplicativo<br />
+        O mundo ficou cativo<br />
+        Da tecnologia do agora.<br />
+      </p>
+      <br />
+
+      <p class="Paragrafostxt">
+        Felizmente, pra orar<br />
+        Não precisa de internet<br />
+        Deus escuta todo mundo<br />
+        Se quiser, faça esse teste<br />
+        Dois pontos são dois joelhos<br />
+        Seus lábios são aparelhos<br />
+        Deixe que Deus interprete.
+      </p>
+    </section>
   </body>
   <footer>
-    <p>Site criado pelo Duckluck.</p>
+    <p>
+      Site criado pelo
+      <a href="https://github.com/Lucktdu" target="_blank">Duckluck</a>.
+    </p>
   </footer>
 </html>
