--- a/Index.html
+++ b/Index.html
@@ -24,18 +24,16 @@
   </head>
   <body>
     <header>
-      <p id="txttitulo">
-        CORDEL MODERNO
-        <a
-          href="https://www.recantodasletras.com.br/poesias/3186743"
-          target="_blank">
-          <p id="txtautor">Por Milton Duarte</p>
-        </a>
-      </p>
+      <p id="txttitulo">CORDEL MODERNO</p>
+      <a
+        href="https://www.recantodasletras.com.br/poesias/3186743"
+        target="_blank">
+        <p id="txtautor">Por Milton Duarte</p>
+      </a>
     </header>
 
-    <section>
-      <p class="Paragrafostxt">
+    <section class="sectiontxt">
+      <p >
         Estou ficando cansado<br />
         Da tal tecnologiar <br />
         Só se fala por e-mail<br />
@@ -45,8 +43,9 @@
         Vou dizer tudo em poesia.<br />
       </p>
       <br />
-
-      <p id="imagem01" class="Paragrafosimg">
+       </section>
+       <section class="sectionimg">
+      <p  id='img01' >
         Não é mais como era antes<br />
         É tudo abreviado<br />
         "Você" só tem duas letras<br />
@@ -55,11 +54,12 @@
         Basta botar uma flor<br />
         E um coração desenhado.<br />
       </p>
+      </section>
       <br />
-    </section>
+   
 
-    <section>
-      <p class="Paragrafostxt">
+    <section class="sectiontxt">
+      <p >
         Arroba agora não pesa<br />
         É parte de um endereço<br />
         Ponto final nem se usa<br />
@@ -69,8 +69,10 @@
         Ele vale um alto preço.<br />
       </p>
       <br />
+    </section>
 
-      <p class="Paragrafostxt">
+    <section class="sectionimg">
+      <p id='img02'>
         Pra piorar a liguagem<br />
         O emoticom é um risco<br />
         Tem símbolo para tudo<br />
@@ -80,10 +82,11 @@
         Decifre esse rabisco.
       </p>
     </section>
+    
     <br />
 
-    <section>
-      <p class="Paragrafostxt">
+    <section class="sectiontxt">
+      <p >
         Tenho saudade das cartas<br />
         Escritas com a própria mão<br />
         Mandava no mês de Junho<br />
@@ -100,9 +103,10 @@
         O mundo ficou cativo<br />
         Da tecnologia do agora.<br />
       </p>
+      </section>
       <br />
-
-      <p class="Paragrafostxt">
+    <section class="sectionimg">
+      <p id="img03" >
         Felizmente, pra orar<br />
         Não precisa de internet<br />
         Deus escuta todo mundo<br />
@@ -112,6 +116,7 @@
         Deixe que Deus interprete.
       </p>
     </section>
+    
   </body>
   <footer>
     <p>
